# PIP-Security-Worker

./: LICENSE  README.md  SECURITY.md  pyproject.toml  sonar-project.properties  testing.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  linting.yml  pytest.yml  sonarqube.yml  uv.yml
pip_security_worker/: __init__.py  cli.py  settings.py
pip_security_worker/helpers/: exceptions.py  helper_functions.py  helpers.py  neo4j_handler.py
pip_security_worker/models/: advisory.py  package.py  package_version.py  requirement.py
pip_security_worker/package_analysis/: analyse.py  analyze.py  cli.py  fetch.py  fetch_tasks.py  helpers.py
pip_security_worker/vulnerability_database/: advisory_base.py  cli.py  pip_advisory.py
src/: cli.py
tests/: test_analyse.py  test_cli.py  test_dummy.py  test_helpers.py  test_models.py  test_temporary.py
tests/helpers/: test_helpers.py
tests/models/: test_advisory.py  test_package.py  test_package_version.py  test_requirement.py
tests/test_data/: multiple.xml  single.xml  single_alt_url.xml
tests/test_package_analysis/: test_analyze.py
